<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_sm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:visibility="gone"
                    android:textColor="@color/aforoqr_white_500"
                    android:textColorHint="@color/aforoqr_white_300"
                    android:hint="@string/activity_login_input_name" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/aforoqr_white_500"
                    android:backgroundTint="@color/aforoqr_white_300"
                    android:textColorHint="@color/aforoqr_white_300"
                    android:hint="@string/activity_login_input_email" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/aforoqr_white_300"
                    android:textColor="@color/aforoqr_white_500"
                    android:textColorHint="@color/aforoqr_white_300"
                    android:hint="@string/activity_login_input_password" />

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@color/aforoqr_white_500"
                    android:textColorHint="@color/aforoqr_white_300"
                    android:hint="@string/activity_login_input_confirm_password"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/aforoqr_yellow_500"
                    android:textColor="@color/aforoqr_black_900"
                    android:text="@string/activity_login_btn_login" />

                <Button
                    android:id="@+id/btn_toggle_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_login_register_new_account"
                    android:textSize="16sp"
                    android:textColor="@color/aforoqr_white_300"
                    style="@style/TextAppearance.AforoQR.TextButton" />
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
